--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/svg/Logo pour svg court-stroke-and-fill.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ysoYHbwidRFN9gRefgBBND9kOZSVs53cKeZ5DNPKH-E" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
     <title>Nous Proprio</title>
   </head>
