add trust pilote

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/svg/Logo pour svg court-stroke-and-fill.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/svg/Logo pour svg court-stroke-and-fill.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="ysoYHbwidRFN9gRefgBBND9kOZSVs53cKeZ5DNPKH-E" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+    <meta
+      name="google-site-verification"
+      content="ysoYHbwidRFN9gRefgBBND9kOZSVs53cKeZ5DNPKH-E"
+    />
+    <meta
+      name="trustpilot-one-time-domain-verification-id"
+      content="41ddca8c-b254-4acb-a9d8-6063ef51fea1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
+    />
     <title>NousProprio</title>
   </head>
   <body>
